<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <TextView
        android:id="@+id/bmi_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-black"
        android:text="@string/bmi_calculator"
        android:textColor="#131313"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.267"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.124" />

    <TextView
        android:id="@+id/weight_kg"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="44dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/your_weight_in_kg"
        android:textColor="#171616"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bmi_title"
        app:layout_constraintVertical_bias="0.007" />

    <EditText
        android:id="@+id/weight_result"
        android:layout_width="347dp"
        android:layout_height="62dp"
        android:autofillHints=""
        android:background="@drawable/edit_bg"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.272"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/weight_kg"
        app:layout_constraintVertical_bias="0.033"
        tools:ignore="LabelFor,TextFields" />

    <TextView
        android:id="@+id/height_meters"
        android:layout_width="180dp"
        android:layout_height="22dp"
        android:layout_marginTop="32dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/your_height_in_cm"
        android:textColor="#171616"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.068"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/weight_result"
        app:layout_constraintVertical_bias="0.102" />

    <EditText
        android:id="@+id/height_result"
        android:layout_width="356dp"
        android:layout_height="61dp"
        android:autofillHints=""
        android:background="@drawable/edit_bg"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.238"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/height_meters"
        app:layout_constraintVertical_bias="0.031"
        tools:ignore="LabelFor,TextFields" />

    <Button
        android:id="@+id/bmi_calculate"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/new_button"
        android:fontFamily="sans-serif-black"
        android:text="@string/calculate"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/height_result"
        app:layout_constraintVertical_bias="0.178" />

    <TextView
        android:id="@+id/bmi_detail"
        android:layout_width="86dp"
        android:layout_height="33dp"
        android:text="@string/further_detail"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.169"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bmi_calculate"
        app:layout_constraintVertical_bias="0.191" />

    <TextView
        android:id="@+id/bmi_display"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bmi"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.155"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bmi_detail"
        app:layout_constraintVertical_bias="0.144" />

    <Button
        android:id="@+id/bmi_reset"
        android:layout_width="120dp"
        android:layout_height="51dp"
        android:background="@drawable/new_button"
        android:text="@string/reset"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bmi_display"
        app:layout_constraintVertical_bias="0.25" />

</androidx.constraintlayout.widget.ConstraintLayout>